--- a/POKEDEX/index.html
+++ b/POKEDEX/index.html
@@ -17,12 +17,39 @@
     <link href="https: //fonts.googleapis.com/css2? family= Roboto:ital,wght@0,100;0,500;0,700;1,100 & display=swap" rel="stylesheet">
     
     <!--Nosso CSS--> 
-    <link rel="stylesheet" href="/assets/css/global.css">    
+    <link rel="stylesheet" href="assets/css/global.css"> 
 </head>
 
 <body>  
-    <h1>Meu Primeiro Site</h1> 
-    <p>Meu primeiro site está sendo feito junto de um curso da DIO</p>
+    <section class="content">
+        <h1>Pokedex</h1>
+
+        <ol class="pokemons">
+            <li>
+                Bulbasaur
+            </li>
+            <li>
+                Ivysaur
+            </li>
+            <li>
+                Venusaur 
+            </li>
+            <li>
+               Charmander 
+            </li>
+            <li>
+                Charmeleon 
+            </li>
+            <li>
+                Charlizard
+            </li>
+        </ol>
+
+
+    </section>
+    
+
+
 
     <!--Nosso JS--> 
     <script src="/assets/js/main.js"></script>
