--- a/POKEDEX/index.html
+++ b/POKEDEX/index.html
@@ -18,6 +18,7 @@
     
     <!--Nosso CSS--> 
     <link rel="stylesheet" href="assets/css/global.css"> 
+    <link rel="stylesheet" href="assets/css/pokedex.css"> 
 </head>
 
 <body>  
@@ -25,24 +26,18 @@
         <h1>Pokedex</h1>
 
         <ol class="pokemons">
-            <li>
-                Bulbasaur
-            </li>
-            <li>
-                Ivysaur
-            </li>
-            <li>
-                Venusaur 
-            </li>
-            <li>
-               Charmander 
-            </li>
-            <li>
-                Charmeleon 
-            </li>
-            <li>
-                Charlizard
-            </li>
+            <li class="pokemon">
+                <span class="number">#001</span> 
+                <span class="name">Bulbasaur</span>
+
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">Grass</li>
+                        <li class="type">Poison</li>
+
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
+                </div>  
         </ol>
 
 
