--- a/POKEDEX/index.html
+++ b/POKEDEX/index.html
@@ -12,9 +12,13 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
     <!--Font Roboto--> 
+    <!--<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https: //fonts.googleapis.com/css2? family= Roboto:ital,wght@0,100;0,500;0,700;1,100 & display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2? family= Roboto:wght@100;400;500;700 & display=swap" rel="preconnect">
+    <!--<link href="https: //fonts.googleapis.com/css2? family= Roboto:wght@100;400;500;700 & display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2? family= Roboto:ital,wght@0,100;0,500;0,700;1,100 & display=swap" rel="stylesheet">-->
     
     <!--Nosso CSS--> 
     <link rel="stylesheet" href="assets/css/global.css"> 
@@ -25,7 +29,7 @@
     <section class="content">
         <h1>Pokedex</h1>
 
-        <ol class="pokemons">
+        <ol id='pokemonList' class="pokemons">
             <li class="pokemon">
                 <span class="number">#001</span> 
                 <span class="name">Bulbasaur</span>
@@ -37,16 +41,16 @@
 
                     </ol>
                     <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
-                </div>  
+                </div> 
+            </li>  
         </ol>
-
-
     </section>
     
 
 
 
     <!--Nosso JS--> 
+    <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
 </body>
 
